--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,9 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
 
+    implementation "androidx.cardview:cardview:1.0.0"
+
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+
 }
